[package]
name = "gamecode-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "Backend trait and common types for LLM integrations in the gamecode ecosystem"
repository = "https://github.com/navicore/gamecode-backend"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
async-trait = "0.1"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
